--- a/index.html
+++ b/index.html
@@ -2,33 +2,19 @@
 <html>
 <head>
 	<title>首页 - hashben's museum</title>
-	<script type="text/javascript">
-		function drawSquare(sx, sy, tx, ty){
-			context.beginPath();
-			context.moveTo(sx, sy);
-			context.lineTo(sx, ty);
-			context.lineTo(tx, ty);
-			context.lineTo(tx, sy);
-			context.closePath();
-			context.stroke();
-		}
-	</script>
+	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
+
 </head>
-<body>
-	<canvas id="mine" style="width:100%; height:100%">您的浏览器不支持canvas</canvas>
-	<script type="text/javascript">
-		var canvas = document.getElementById("mine");
-		var context = canvas.getContext('2d');
-		context.lineCap = 'square';
-		context.strokeStyle = '#000000';
-		context.lineWidth = 2;
-		// drawSquare(0, 0, screen.width, 20);
-		context.fillStyle = 'black';
-		context.fillRect(0, 0, screen.width, 20);
-		context.fillStyle = 'white';
-		context.font = "14px Comic Sans MS";
-		context.fillText("hashben's museum", 5, 15);
-		context.fill();
-	</script>
+<body style="background: #EEE;">
+	<div class="mdui-appbar">
+		<div class="mdui-toolbar mdui-color-grey-900">
+			<span><font size="5px" face="Consolas">Hashben Museum</font></span>
+		</div>
+		<div class="mdui-tab mdui-color-grey-900" mdui-tab>
+			<a href="#tab1" class="mdui-ripper mdui-ripper-white">题库</a>
+			<a href="#tab3" class="mdui-ripper mdui-ripper-white">博客</a>
+		</div>
+	</div>
 </body>
 </html>
