--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body style="background: #EEE;">
 	<div class="mdui-appbar">
 		<div class="mdui-toolbar mdui-color-grey-900">
+			<a href="javascript:;" class="mdui-btn mdui-btn-icon">
+				<i class="mdui-icon material-icons">menu</i>
+			</a>
 			<span><font size="5px" face="Consolas">Hashben Museum</font></span>
 		</div>
 		<div class="mdui-tab mdui-color-grey-900" mdui-tab>
-			<a href="#tab1" class="mdui-ripper mdui-ripper-white">题库</a>
-			<a href="#tab3" class="mdui-ripper mdui-ripper-white">博客</a>
+			<a href="https://hexuben.github.io" class="mdui-ripper mdui-ripper-white">主页</a>
+			<a href="https://hexuben.github.io/problem" class="mdui-ripper mdui-ripper-white">题库</a>
+			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">博客</a>
 		</div>
 	</div>
 </body>
