--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<span><font size="5px" face="Consolas">Hashben Museum</font></span>
 		</div>
 		<div class="mdui-tab mdui-color-grey-900" mdui-tab>
-			<a href="https://hexuben.github.io" class="mdui-ripper mdui-ripper-white">主页</a>
+			<a href="" class="mdui-ripper mdui-ripper-white mdui-tab-active">主页</a>
 			<a href="https://hexuben.github.io/problem" class="mdui-ripper mdui-ripper-white">题库</a>
 			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">博客</a>
 		</div>
