--- a/problem.html
+++ b/problem.html
@@ -4,13 +4,17 @@
 	<title>题库 - hashben's problem</title>
 	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
-
+	<script type="text/javascript">
+		window.onload=function(){
+			mdui.mutation();
+		}
+	</script>
 </head>
 <body style="background: #EEE;">
 	<div class="mdui-appbar">
 		<div class="mdui-toolbar mdui-color-grey-900">
 			<a href="javascript:;" class="mdui-btn mdui-btn-icon">
-				<i class="mdui-icon material-icons">menu</i>
+				<i class="mdui-icon material-icons">&#xe545;</i>
 			</a>
 			<span><font size="5px" face="Consolas">Hashben Problem</font></span>
 		</div>
