--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="mdui-appbar">
 		<div class="mdui-toolbar mdui-color-grey-900">
 			<a href="javascript:;" class="mdui-btn mdui-btn-icon">
-				<i class="mdui-icon material-icons">menu</i>
+				<i class="mdui-icon material-icons">&#xe545;</i>
 			</a>
 			<span><font size="5px" face="Consolas">Hashben Museum</font></span>
 		</div>
