--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>首页 - hashben's museum</title>
 	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
-
 </head>
 <body style="background: #EEE;">
 	<div class="mdui-appbar">
@@ -13,6 +12,10 @@
 				<i class="mdui-icon material-icons">&#xe545;</i>
 			</a>
 			<span><font size="5px" face="Consolas">Hashben Museum</font></span>
+			<div class="mdui-toolbar-spacer"></div>
+			<a href="https://hexuben.github.io/busstop" class="mdui-btn mdui-btn-icon">
+				<i class="mdui-icon material-icons">&#xeb3c;</i>
+			</a>
 		</div>
 		<div class="mdui-tab mdui-color-grey-900" mdui-tab>
 			<a href="" class="mdui-ripper mdui-ripper-white mdui-tab-active">主页</a>
