--- a/busstop.html
+++ b/busstop.html
@@ -12,6 +12,10 @@
 				<i class="mdui-icon material-icons">&#Xe545;</i>
 			</a>
 			<span><font face="Consolas" size="5px">Hashben Bus Stop</font></span>
+			<div class="mdui-toolbar-spacer mdui-color-grey-900"></div>
+			<a href="https://hexuben.github.io">
+				<i class="mdui-icon material-icons">&#xe042;</i>
+			</a>
 		</div>
 	</div>
 </body>
