--- a/busstop.html
+++ b/busstop.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
 	<title>公交车站 - Hashben's bus stop</title>
 	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
+	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="hashben.js"></script>
 </head>
-<body style="background: #EEE">
-	<div class="mdui-appbar">
-		<div class="mdui-toolbar mdui-color-grey-900">
+<body style="background: #EEE;">
+	<div class="mdui-appbar mdui-color-theme">
+		<div class="mdui-toolbar mdui-color-theme">
 			<a href="javascript:;" class="mdui-btn mdui-btn-icon">
 				<i class="mdui-icon material-icons">&#Xe545;</i>
 			</a>
