--- a/problem.html
+++ b/problem.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
 	<title>题库 - hashben's problem</title>
 	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
+	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="hashben.js"></script>
 	<script type="text/javascript">
 		window.onload=function(){
 			mdui.mutation();
@@ -11,14 +15,14 @@
 	</script>
 </head>
 <body style="background: #EEE;">
-	<div class="mdui-appbar">
-		<div class="mdui-toolbar mdui-color-grey-900">
+	<div class="mdui-appbar mdui-color-theme">
+		<div class="mdui-toolbar mdui-color-theme">
 			<a href="javascript:;" class="mdui-btn mdui-btn-icon">
 				<i class="mdui-icon material-icons">&#xe545;</i>
 			</a>
 			<span><font size="5px" face="Consolas">Hashben Problem</font></span>
 		</div>
-		<div class="mdui-tab mdui-color-grey-900" mdui-tab>
+		<div class="mdui-tab mdui-color-theme" mdui-tab>
 			<a href="https://hexuben.github.io" class="mdui-ripper mdui-ripper-white">主页</a>
 			<a href="" class="mdui-ripper mdui-ripper-white mdui-tab-active">题库</a>
 			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">博客</a>
