--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,7 @@
 	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="hashben.js"></script>
+	<script src="theme.js"></script>
 </head>
 <body style="background: #EEE;">
 	<div class="mdui-appbar mdui-color-theme">
