--- a/index.html
+++ b/index.html
@@ -28,26 +28,27 @@
 			<a href="" class="mdui-ripper mdui-ripper-white mdui-tab-active">主页</a>
 			<a href="https://hexuben.github.io/problem" class="mdui-ripper mdui-ripper-white">题库</a>
 			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">博客</a>
+			<div class="mdui-tab-indicator" style="left: 0px; width: 408px;"></div>
 		</div>
 	</div>
 	<div class="mdui-dialog" id="theme">
 		<div class="mdui-dialog-title">Theme Settings</div>
 		<div class="mdui-dialog-content">
 			You can set theme here.<br><br>
-			<div class="mdui-chip mdui-color-indigo">
-				<a onclick="changeTheme('indigo');">
-					<span class="mdui-chip-title">Indigo</span>
-				</a>
-			</div>
 			<div class="mdui-chip mdui-color-red">
-				<a onclick="changeTheme('red');">
-					<span class="mdui-chip-title">Red</span>
-				</a>
+				<a onclick="changeTheme('red');"><span class="mdui-chip-title">Red</span></a>
+			</div>
+			<div class="mdui-chip mdui-color-pink">
+				<a onclick="changeTheme('pink');"><span class="mdui-chip-title">Pink</span></a>
+			</div>
+			<div class="mdui-chip mdui-color-purple">
+				<a onclick="changeTheme('purple');"><span class="mdui-chip-title">Purple</span></a>
 			</div>
 			<div class="mdui-chip mdui-color-deep-purple">
-				<a onclick="changeTheme('deep-purple');">
-					<span class="mdui-chip-title">Deep Purple</span>
-				</a>
+				<a onclick="changeTheme('deep-purple');"><span class="mdui-chip-title">Deep purple</span></a>
+			</div>
+			<div class="mdui-chip mdui-color-indigo">
+				<a onclick="changeTheme('indigo');"><span class="mdui-chip-title">Indigo</span></a>
 			</div>
 		</div>
 		<div class="mdui-dialog-actions">
