--- a/problem.html
+++ b/problem.html
@@ -26,6 +26,7 @@
 			<a href="https://hexuben.github.io" class="mdui-ripper mdui-ripper-white">主页</a>
 			<a href="" class="mdui-ripper mdui-ripper-white mdui-tab-active">题库</a>
 			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">博客</a>
+			<div class="mdui-tab-indicator" style="left: 0px; width: 100%;"></div>
 		</div>
 	</div>
 </body>
