--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<a href="" class="mdui-ripper mdui-ripper-white mdui-tab-active">主页</a>
 			<a href="https://hexuben.github.io/problem" class="mdui-ripper mdui-ripper-white">题库</a>
 			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">博客</a>
-			<div class="mdui-tab-indicator" style="left: 0px; width: 408px;"></div>
+			<div class="mdui-tab-indicator" style="left: 0px; width: 100%;"></div>
 		</div>
 	</div>
 	<div class="mdui-dialog" id="theme">
