--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</div>
 	<div id="problem">
 		<br>
-		<div class="mdui-row">
+		<div class="mdui-row" style="margin-right: 0;">
 			<div class="mdui-col-xs-12">
 				<div class="mdui-container mdui-shadow-2" style="background: #ffffffbb">
 					<br>
