--- a/busstop.html
+++ b/busstop.html
@@ -7,7 +7,7 @@
 	<script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="theme.js"></script>
+	<script src="tools.js"></script>
 </head>
 <body style="background: #EEE;">
 	<div class="mdui-appbar mdui-color-theme">
@@ -41,14 +41,18 @@
 							<th>1</th>
 							<th>洛谷 Luogu</th>
 							<th>中国 China</th>
-							<th><a href="https://www.luogu.com.cn"><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a></th>
+							<th>
+								<a href="https://www.luogu.com.cn"><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a>
+							</th>
 							<th>None</th>
 						</tr>
 						<tr>
 							<th>2</th>
 							<th>Codeforces</th>
 							<th>俄罗斯 Russia</th>
-							<th><a href="https://www.codeforces.com"><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a></th>
+							<th>
+								<a href="https://www.codeforces.com"><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a>
+							</th>
 							<th>
 								<a href="https://codeforc.es"><i class="mdui-icon material-icons">&#xe0c8;</i></a>
 								<a href="https://codeforces.ml"><i class="mdui-icon material-icons">&#xe0c8;</i></a>
@@ -58,23 +62,11 @@
 							<th>3</th>
 							<th>Atcoder</th>
 							<th>日本 Japan</th>
-							<th><a href="https://atcoder.jp"><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a></th>
+							<th>
+								<a href="https://atcoder.jp"><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a>
+							</th>
 							<th>None</th>
-						</tr>
-						<tr>
-							<th>4</th>
-							<th>Acwing</th>
-							<th>中国 China</th>
-							<th><a><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a></th>
-							<th>None</th>
-						</tr>
-						<tr>
-							<th>5</th>
-							<th>Hydro</th>
-							<th>中国 China</th>
-							<th><a><button class="mdui-btn mdui-ripper mdui-color-grey-700">wormhole</button></a></th>
-							<th>None</th>
-						</tr>
+						</th>
 					</tbody>
 				</table>
 			</div>
