--- a/problem.html
+++ b/problem.html
@@ -34,6 +34,21 @@
 			</a>
 		</div>
 	</div>
+	<div id="problem">
+		<br>
+		<div class="mdui-row" style="margin-right: 0;">
+			<div class="mdui-col-xs-12">
+				<div class="mdui-container mdui-shadow-2" style="background: #ffffffbb">
+					<br>
+					<center>
+						<div style="font-size: 32px; font-weight: 700;">
+							Hashben Problem
+						</div>
+					</center>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="mdui-dialog" id="theme">
 		<div class="mdui-dialog-title">Theme Settings</div>
 		<div class="mdui-dialog-content">
