--- a/problem.html
+++ b/problem.html
@@ -22,7 +22,7 @@
 			<a href="https://hexuben.github.io/problem" class="mdui-ripper mdui-ripper-white">
 				<i class="mdui-icon material-icons">&#xe85d;</i>
 			</a>
-			<a href="https://hexuben.github.io/blogs" class="mdui-ripper mdui-ripper-white">
+			<a href="https://hexuben.github.io/blog" class="mdui-ripper mdui-ripper-white">
 				<i class="mdui-icon material-icons">&#xe865;</i>
 			</a>
 			<div class="mdui-toolbar-spacer"></div>
