--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css"/>
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="tools.js"></script>
+	<link rel="stylesheet" type="text/css" href="blog.css">
 </head>
 <body style="background: #EEE;">
 	<div class="mdui-appbar mdui-color-theme">
@@ -32,6 +33,25 @@
 			<a href="https://hexuben.github.io/busstop" class="mdui-btn mdui-btn-icon">
 				<i class="mdui-icon material-icons">&#xeb3c;</i>
 			</a>
+		</div>
+	</div>
+	<br>
+	<div class="mdui-row" style="margin-right: 0;">
+		<div class="mdui-col-xs-12">
+			<div class="mdui-container mdui-shadow-2" style="background: #ffffffbb">
+				<br>
+				<center>
+					<div style="font-size: 32px; font-weight: 700;">
+						Hashben Blog
+					</div>
+				</center>
+				<br>
+				<a href="https://hexuben.github.io/blogs/dynamic/bianjijuli"><button>__</button></a>
+				<tr><td><text>编辑距离</text></td></tr>
+				<br>
+				<a href="https://hexuben.github.io/blogs/solution-CF1734E"><button>__</button></a>
+				<text><tr><td>【题解】CF1734E</td></tr></text>
+			</div>
 		</div>
 	</div>
 	<div class="mdui-dialog" id="theme">
