--- a/blog.html
+++ b/blog.html
@@ -51,6 +51,12 @@
 				<br>
 				<a href="https://hexuben.github.io/blogs/solution-CF1734E"><button>__</button></a>
 				<text><tr><td>【题解】CF1734E</td></tr></text>
+				<a href="https://hexuben.github.io/blogs/solution-CF962D"><button>__</button></a>
+				<text><tr><td>【题解】CF962D</td></tr></text>
+				<a href="https://hexuben.github.io/blogs/solution-CF388B"><button>__</button></a>
+				<text><tr><td>【题解】CF388B</td></tr></text>
+				<a href="https://hexuben.github.io/blogs/solution-ARC112E"><button>__</button></a>
+				<text><tr><td>【题解】ARC112E</td></tr></text>
 			</div>
 		</div>
 	</div>
