--- a/music/flower_sea.html
+++ b/music/flower_sea.html
@@ -3,7 +3,8 @@
 <head>
 	<title></title>
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/0d8081718e.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="musicCard.css">
 	<script>
 		function loadfile(filename,func){
 			let url=filename;
@@ -55,7 +56,7 @@
 										temp += ", " + singer[Number(tmp) - 1];
 									});
 									// console.log(parameter);
-									code += `<p class="lyric-singer">${temp.substring(2)}</p>`;
+									code += `<p class="lyric lyric-singer">${temp.substring(2)}</p>`;
 								}
 							}
 						} else {
@@ -85,14 +86,56 @@
 				}
 			});
 		};
+		function songPause(id, btn){
+			if($(id)[0].paused){
+				$(id)[0].play();
+				$(id).removeClass("pause").addClass("play");
+				$(btn).html(`<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16"><path d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z"/></svg>`);
+			} else {
+				$(id)[0].pause();
+				$(id).removeClass("play").addClass("pause");
+				$(btn).html(`<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/></svg>`);
+			}
+		}
 		$(document).ready(function(){
 			loadLyric("#my-lyric", "https://hexuben.github.io/music/花海（花の海）.txt");
 		});
 	</script>
 </head>
 <body>
-	<div class="lyric" id="my-lyric">
-		
+	<audio id="my-mp3">
+		<source src="花海.mp3" type="audio/mpeg">
+		<source src="花海.ogg" type="audio/ogg">
+		<embed height="50" width="100" src="花海.mp3">
+	</audio> 
+	<div class="musicPlayer musicPlayer-smallCard" style="width: 750px; margin-left: calc(50% - 750px / 2);">
+		<button class="roundButton" onclick='songPause("#my-mp3", "#songPauseButton");' id="songPauseButton">
+			<i class="fa-solid fa-play"></i>
+		</button>
+		<div class="musicPlayer-smallCard-middleContainer">
+			<span class="musicPlayer-cardText musicPlayer-scroll">花海（花の海） - 龚琳娜，美依礼芽MARiA</span>
+			<span class="musicPlayer-cardText">0:00 / 4:39</span>
+			<div class="musicPlayer-progress-container">
+				<div class="musicPlayer-progress-back"></div>
+				<div class="musicPlayer-progress-front"></div>
+			</div>
+		</div>
+		<button class="roundButton">
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
+				<path d="M11.536 14.01A8.473 8.473 0 0 0 14.026 8a8.473 8.473 0 0 0-2.49-6.01l-.708.707A7.476 7.476 0 0 1 13.025 8c0 2.071-.84 3.946-2.197 5.303l.708.707z"/>
+				<path d="M10.121 12.596A6.48 6.48 0 0 0 12.025 8a6.48 6.48 0 0 0-1.904-4.596l-.707.707A5.483 5.483 0 0 1 11.025 8a5.483 5.483 0 0 1-1.61 3.89l.706.706z"/>
+				<path d="M8.707 11.182A4.486 4.486 0 0 0 10.025 8a4.486 4.486 0 0 0-1.318-3.182L8 5.525A3.489 3.489 0 0 1 9.025 8 3.49 3.49 0 0 1 8 10.475l.707.707zM6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06z"/>
+			</svg>
+		</button>
+		<span class="musicPlater-smallCard-middleContainer">
+			<div style="width: 10%; display: inline-block; margin: 0px 5px;">
+				<div class="musicPlayer-progress-container">
+					<div class="musicPlayer-progress-back"></div>
+					<div class="musicPlayer-progress-front"></div>
+				</div>
+			</div>
+		</span>
 	</div>
+	<div class="lyric-box" id="my-lyric"></div>
 </body>
 </html>
