--- a/music/flower_sea.html
+++ b/music/flower_sea.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/0d8081718e.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="musicCard.css">
+	<link rel="stylesheet" type="text/css" href="music.css">
 	<script>
 		function loadfile(filename,func){
 			let url=filename;
