upd: update stylesheet of tosochu-test

--- a/tosochu-test/index.html
+++ b/tosochu-test/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="init.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <div class="tab">
         <button class="tab-encode">encode</button>
@@ -15,9 +19,25 @@
         <span class="showing-decode-text"></span>
     </div>
     <div class="container control-container">
+        <div class="item-top"></div>
+        <div class="item-body control-body">
+            <div class="item-innerGrid">
+                <div class="control-main"></div>
+            </div>
+        </div>
+        <div class="item-footer"> </div>
     </div>
     <div class="container display-container">
-        <p class="display-title">Haven't shown any.</p>
+        <div class="item-top"></div>
+        <div class="item-body display-body">
+            <div class="item-innerGrid">
+                <div class="display-main">
+                    <p class="display-title">Haven't shown any.</p>
+                </div>
+            </div>
+        </div>
+        <div class="item-footer"></div>
     </div>
 </body>
+
 </html>
